# Guacamoliency

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  data_analysis_env.yml  environment.yml  file.ipynb  generate_blocksmiles_conditional.sh  h origin HEAD~3:main  launch_training_guacamol_can.sh  launch_training_moses.sh  launch_training_moses_can.sh  launch_training_moses_clearsmi.sh  pyproject.toml  run.pbs  run2.pbs  run_guacamol_can.pbs  run_loop.sh  run_moses_ClearSMILES.pbs  run_moses_can.pbs  run_test.pbs  run_workflow.py  train_blocksmiles.sh  train_blocksmiles_conditional.sh  train_env_2.yml  training_env.yml  workflow.smk
docs/: mkdocs.yml
env_file/: env_minimal.yml  train_env.yml  training_env-depend.yml
guacamoliency/: BECNHMARK_moses.py  BENCHMARK_custom_metrics.py  BENCHMARK_moses.py  __init__.py  dataset.py  features.py  frequencies_of_precedent_tokens.py  generate_blocksmiles_tokenizer.py  generate_character_based_tokenizer.py  generate_inchies_tokenizer.py  generate_selfies_tokenizer.py  generate_tokenizerBEP.py  plots.py  saliency_according_distance.py  saliency_pair_coherence.py  saliency_scoring.py
notebooks/: analysis_dataset_properties.ipynb  analysis_generated_vocabulary.ipynb  analysis_tokenizer_vocab.ipynb  analysis_vocab.ipynb  benchmark.ipynb  convert_inchies_generated.ipynb  create_new_dataset.ipynb  data_creation_can_murcko_for_tokenizer.ipynb  dataset_conversion_murckoscaffold.ipynb  dataset_conversion_murckoscaffold_canonical.ipynb  frequencies_tokens_use_BPE.ipynb  generate_figure_pres.ipynb  inchies_key_analysis.ipynb  (+12 more)
(+583 files in other folders)
